--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.5.5</version>
+        <version>3.5.6</version>
         <relativePath/>
     </parent>
     <groupId>org.daypilot.demo</groupId>
@@ -13,7 +13,7 @@
 
     <!-- add: -->
     <properties>
-        <java.version>25</java.version>
+        <java.version>21</java.version>
     </properties>
     <dependencies>
         <dependency>
@@ -38,4 +38,24 @@
             <artifactId>spring-boot-starter-security</artifactId>
         </dependency>
     </dependencies>
+    <build>
+        <plugins>
+	        <plugin>
+			    <groupId>org.apache.maven.plugins</groupId>
+			    <artifactId>maven-dependency-plugin</artifactId>
+	            <executions>
+	                <execution>
+	                	<phase>compile</phase>
+	                    <goals>
+	                        <goal>tree</goal>
+	                    </goals>
+	                </execution>
+	            </executions>
+			    <configuration>
+			    	<outputType>graphml</outputType>
+			    	<outputFile>src/main/resources/${project.name}-dependency-tree.xml</outputFile>
+			    </configuration>
+	        </plugin>
+        </plugins>
+    </build>
 </project>
