--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
         <relativePath/>
     </parent>
     <groupId>org.daypilot.demo</groupId>
-    <artifactId>html5-scheduler-spring</artifactId>
+    <artifactId>dependency-management</artifactId>
     <version>0.0.1-SNAPSHOT</version>
 
     <!-- add: -->
