--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+server.servlet.context-path=/demo
+
 spring.datasource.url=jdbc:h2:mem:mydb
 spring.h2.console.enabled=true
 spring.jpa.hibernate.ddl-auto=create
